--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,9 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/foundation.css">
     <link rel="stylesheet" href="/styles/importer.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <!--STYLES END-->
   </head>
 
@@ -89,6 +91,11 @@
 
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/foundation.min.js"></script>
+    <script src="/js/dependencies/jquery.js"></script>
+    <script src="/js/public/signup/signupModule.js"></script>
+    <script src="/js/public/signup/signupController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
