--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,6 +29,7 @@
     -->
 
     <!--STYLES-->
+    <link rel="stylesheet" href="/styles/angular-toastr.css">
     <link rel="stylesheet" href="/styles/foundation.css">
     <link rel="stylesheet" href="/styles/importer.css">
     <link rel="stylesheet" href="/styles/style.css">
@@ -92,10 +93,14 @@
     <!--SCRIPTS-->
     <script src="/js/dependencies/sails.io.js"></script>
     <script src="/js/dependencies/angular.js"></script>
+    <script src="/js/dependencies/angular-toastr.js"></script>
+    <script src="/js/dependencies/angular-toastr.tpls.js"></script>
     <script src="/js/dependencies/foundation.min.js"></script>
     <script src="/js/dependencies/jquery.js"></script>
     <script src="/js/public/signup/signupModule.js"></script>
     <script src="/js/public/signup/signupController.js"></script>
+    <script src="/js/public/login/loginModule.js"></script>
+    <script src="/js/public/login/loginController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
