--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -101,6 +101,8 @@
     <script src="/js/public/signup/signupController.js"></script>
     <script src="/js/public/login/loginModule.js"></script>
     <script src="/js/public/login/loginController.js"></script>
+    <script src="/js/private/dashboard/dashModule.js"></script>
+    <script src="/js/private/dashboard/dashController.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
