--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -8,20 +8,18 @@
   <link rel="stylesheet" href="/styles/style.css">
   <!--STYLES END-->
 </head>
-<body ng-app="DashModule" ng-controller="DashController" ng-init="getUser()">
+<body ng-app="DashModule" ng-controller="DashController as dc" ng-init="dc.getUser()">
 <nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
     <li class="name">
       <h1><a href="#">Dashboard</a></h1>
     </li>
-    <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
 
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#" ng-click="logout()">Logout</a></li>
+      <li class="active"><a href="#" ng-click="dc.logout()">Logout</a></li>
     </ul>
 
 
@@ -31,13 +29,13 @@
   <h1>Dashboard</h1>
   <div class="row">
     <div class="large-2 columns">
-      <img ng-src="{{user.gravatarUrl}}">
+      <img ng-src="{{dc.user.gravatarUrl}}">
     </div>
     <div class="large-8 columns">
       <ul>
-        <li>Name: {{user.name}}</li>
-        <li>Email: {{user.email}}</li>
-        <li>Member Since: {{user.createdAt}}</li>
+        <li>Name: {{dc.user.name}}</li>
+        <li>Email: {{dc.user.email}}</li>
+        <li>Member Since: {{dc.user.createdAt}}</li>
       </ul>
     </div>
   </div>
