--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -19,7 +19,7 @@
   <section class="top-bar-section">
     <!-- Right Nav Section -->
     <ul class="right">
-      <li class="active"><a href="#" ng-click="dc.logout()">Logout</a></li>
+      <li class="active"><a href="/logout">Logout</a></li>
     </ul>
 
 
