--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,7 +33,7 @@
               <input type="submit" class="button expand" value="Log In"/>
             </div>
             <div class="large-7 columns">
-              <a class="button expand">Create Account</a>
+              <a href="/signup" class="button expand">Create Account</a>
             </div>
           </div>
         </form>
