--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -44,7 +44,7 @@
                 <input type="submit" class="button expand" value="Create Account"/>
               </div>
               <div class="large-5 columns">
-                <a class="button expand">Log In</a>
+                <a href="/" class="button expand">Log In</a>
               </div>
             </div>
           </form>
